# Cosmic

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  ECSRequirements.hpp  Engine.hpp  IndexBuffer.hpp  Model.hpp  Renderer.hpp  Requirements.hpp  RequirementsECS.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
include/ECS/: ComponentArray.hpp  ComponentManager.hpp  ECS.hpp
include/ECS/Components/: CameraComponent.hpp  InputComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  ModelComponent.hpp  OrientationComponent.hpp  PlanetComponent.hpp  ShaderComponent.hpp  TransformComponent.hpp  VertexComponent.hpp
include/ECS/Core/: ComponentArray.hpp  ECS.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  Types.hpp
include/ECS/Systems/: CharacterControlSystem.hpp  LightSystem.hpp  ModelRenderSystem.hpp  MovementSystem.hpp  PlanetRenderSystem.hpp  PrimitiveRenderSystem.hpp  RenderSystem.hpp
include/Engine/: Engine.hpp  EngineConfig.hpp  Imgui.hpp  Requirements.hpp  RequirementsECS.hpp
include/Objects/: Camera.hpp  Planet.hpp  SkyBox.hpp
include/OpenGL/: Mesh.hpp  VertexArray.hpp
include/Scenes/: IScene.hpp  TestScene.hpp
include/Util/: Debug.hpp  Directions.hpp  GenerateVertices.hpp
include/entities/: Camera.hpp  DebugLine.hpp  Planet.hpp  Player.hpp
res/assets/spaceship/: space_ship3.mtl
res/shaders/: debug_line.fs  debug_line.vs  fragment_shader.fs  light_shader.fs  planet.fs  planet.tesc  planet.tese  skybox.fs  skybox.vs  vertex_shader.vs
src/: camera.cpp  engine.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
src/ECS/: RenderSystem.cpp  charcterControlSystem.cpp  lightSystem.cpp  modelRenderSystem.cpp  movementSystem.cpp  planetRenderSystem.cpp  primitiveRenderSystem.cpp
src/engine/: engine.cpp  imgui.cpp
src/entities/: camera.cpp  debugLine.cpp  planet.cpp  player.cpp  skyBox.cpp
src/objects/: camera.cpp  planet.cpp  player.cpp
src/openGL/: indexBuffer.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/scenes/: testScene.cpp
src/util/: debug.cpp  generateVertices.cpp
